feat: Enhance user and address management with internationalization support and improved error handling